plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = '16'
targetCompatibility = '16'

group 'io.github.kinderhead'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes 'Main-Class': 'io.github.kinderhead.T2L.tvm.Main'
    }
}

application {
    mainClassName = 'io.github.kinderhead.T2L.tvm.Main'
}
